--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-/*.iml
+/build/
+/run/
+/.idea/
+/.gradle/
+/api/.gradle/
+/api/build/
+/build-logic/.gradle/
+/build-logic/build/
+/fabric/.gradle/
+/fabric/build/
+/fabric/run/
+/forge/.gradle/
+/forge/build/
+/forge/run/
+*.iml
